--- a/pom.xml
+++ b/pom.xml
@@ -203,8 +203,11 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
-
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+            </plugin>
         </plugins>
     </build>
 
