Added driver launch from file

--- a/src/test/resources/properties/config.properties
+++ b/src/test/resources/properties/config.properties
@@ -3,3 +3,4 @@ url=https://edujira.ifellow.ru/
 login=AT6
 password=Qwerty123
 nameTask=MyTask up up
+chromeDriverPath=src/test/resources/ChromeDriver/chromedriver.exe
